fix:20.10.2023 17:55 method convertToDto was changed.